# CarDetection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.gpu.yaml  docker-compose.yaml  entrypoint.sh  makefile  pyproject.toml  run_install.bat  train.py
configs/: clearml.conf.example
configs/traindataconfigs/: data_CARS.yaml  data_CARS.yaml.example
configs/trainerconfigs/: trainer_config_cars.yaml  trainer_config_cars.yaml.example
configs/trainmodelconfig/CARS/: model_cfg_CARS_exp_1.yaml  model_cfg_CARS_exp_1.yaml.example
scripts/: install_dependencies.ps1
src/: trainer.py
src/callbacks/: callbacks.py  debug.py
src/constantsconfigs/: config.py  constants.py
src/datasets/: __init__.py  kaggle.py
src/inference/: predict.py
src/mlflow_tracking/: cust_mlflow.py
src/settings_update/: yolo_settings_update.py
src/utils/: load_config.py
